# CPPRak

./: .gitignore  CPP Project Brief Draft_Sem2_2026.docx  CloudEventSystem_Professional.pptx  README.md
backend/: application.py  requirements.txt  run.py
backend/.ebextensions/: 01_flask.config
backend/app/: __init__.py  config.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/routes/: admin.py  auth.py  events.py  registrations.py  tickets.py
backend/app/services/: __init__.py  auth_service.py  cognito_service.py  dynamo_service.py  lambda_service.py  s3_service.py
backend/qr_ticket_manager/: __init__.py  qr_code_creator.py  ticket_generator.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/common/: LoadingSpinner.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  CreateEvent.jsx  EventDetail.jsx  Events.jsx  Home.jsx  Login.jsx  MyTickets.jsx  Register.jsx  ScanTicket.jsx  TicketDetail.jsx  VerifyEmail.jsx
frontend/src/services/: api.js
lambda_functions/: local_runner.py
lambda_functions/qr_generator/: handler.py
lambda_functions/qr_validator/: handler.py
qr_ticket_manager/: README.md  pyproject.toml  setup.py
qr_ticket_manager/qr_ticket_manager/: exceptions.py  logger.py  ticket_validator.py
qr_ticket_manager/tests/: test_qr_code_creator.py  test_ticket_generator.py  test_ticket_validator.py
report/: main.tex
