[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qr_ticket_manager"
version = "1.0.0"
description = "A library for generating and validating QR-coded event tickets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rakshan", email = "25180754@student.uwa.edu.au"},
]
dependencies = [
    "qrcode>=7.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
